--- a/src/index.css
+++ b/src/index.css
@@ -96,7 +96,7 @@ input, textarea, select {
 }
 
 [data-theme="dark"] .month-grid-day.vacation:not(.other-month) {
-  background: rgba(219, 0, 27, 0.2);
+  background-color: rgba(219, 0, 27, 0.2);
 }
 
 [data-theme="dark"] .month-grid-day.other-month {
